--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <button>Claws are here</button>
             </div>
             <div class="center-part2">
-              <image src="./wolverine.png" height="90%"/>
+              <image src="./wolverine.png" height="100%" width="55%"/>
             </div>
           </div>
           <div class="section1bottom">
